--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Lesson 3</title>
 </head>
 
@@ -17,10 +17,10 @@
     </header>
     <main>
         <div style="text-align:center">
-            <img src="/img/220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
+            <img src="220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
-            <img src="/img/_119664393_eilish.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
-            <img src="/img/56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
+            <img src="_119664393_eilish.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
+            <img src="56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
         </div>
         <p>
@@ -107,10 +107,11 @@
             </li>
             <li><a href="https://youtube.com/watch?v=-PZsSWwc9xA">Billie Eilish — all the good girls go to hell </a>4
                 сентября 2019 г.</li>
-            <p class="link">Страница создана 12.09.2021<br>
-                by Anika Kirilyuk <br><a href="https://www.instagram.com/anikakirilyuk/?hl=ru"><img
-                        src="/img/instagram-new--v3.png" class="link"></a> </p>
         </ul>
+        <p class="link">Страница создана 12.09.2021<br>
+            by Anika Kirilyuk <br><a href="https://www.instagram.com/anikakirilyuk/?hl=ru"><img
+                    src="instagram-new--v3.png" class="link" alt="инстаграм"></a> </p>
+
     </footer>
 
 </body>
