--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </header>
     <main>
         <div style="text-align:center">
-            <img src="220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
+            <img src="/img/220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
-            <img src="_119664393_eilish.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
-            <img src="56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
+            <img src="/img/_119664393_eilish.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
+            <img src="/img/56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
         </div>
         <p>
