--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div style="text-align:center">
             <img src="img/220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
-            <img src="img/_119664393_eilish.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
+            <img src="img/11.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
             <img src="img/56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
         </div>
