--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </ul>
         <p class="link">Страница создана 12.09.2021<br>
             by Anika Kirilyuk <br><a href="https://www.instagram.com/anikakirilyuk/?hl=ru"><img
-                    src="/img/instagram-new--v3.png" class="link" alt="инстаграм"></a> </p>
+                    src="img/inst.png" class="link" alt="инстаграм"></a> </p>
 
     </footer>
 
