--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="css/style.css">
-    <title>Lesson 3</title>
+    <title>Lesson 4</title>
 </head>
 
 <body>
     <header>
-        <h1>Айлиш, Билли</h1>
+        <h1>Billie</h1>
+        <h1 id="sec">Eilish</h1>
         <p class="comment">Материал из Википедии — свободной энциклопедии</p>
     </header>
     <main>
         <div style="text-align:center">
-            <img src="img/220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
+            <img src="/img/220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
-            <img src="img/11.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
-            <img src="img/56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
+            <img src="/img/11.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
+            <img src="/img/56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
         </div>
         <p>
-            <b>Билли Айлиш Пайрат Бэрд О’Коннелл</b> <i>(англ. Billie Eilish Pirate Baird O'Connell; род. 18 декабря
+            <b class="name">Билли Айлиш Пайрат Бэрд О’Коннелл</b> <i>(англ. Billie Eilish Pirate Baird O'Connell; род.
+                18 декабря
                 2001)</i>— американская певица и автор песен. Снискала известность в 2016 году благодаря публикации
             дебютного сингла «Ocean Eyes» на <a href="https://ru.wikipedia.org/wiki/SoundCloud">SoundCloud</a>. В 2019
             году её дебютный альбом When We All Fall Asleep, Where Do We Go? возглавил американский <a
@@ -45,7 +47,8 @@
         <h3>Карьера</h3>
         <ul>
             <li>
-                <b>2015—2017: <a href="https://ru.wikipedia.org/wiki/Don’t_Smile_at_Me">Don’t Smile At Me</a></b>
+                <b class="name">2015—2017: <a href="https://ru.wikipedia.org/wiki/Don’t_Smile_at_Me">Don’t Smile At
+                        Me</a></b>
                 <br><br>
                 В 2015 году 13-летняя Билли начала работать над песнями вместе со своим братом <a
                     href="https://ru.wikipedia.org/wiki/О’Коннелл,_Финнеас">Финнеасом О’Коннеллом</a>, который уже
@@ -61,7 +64,8 @@
                 поэтому её коммерческий успех значительно расширился.
             </li>
             <li>
-                <b>2018—2020: <a href="https://ru.wikipedia.org/wiki/When_We_All_Fall_Asleep,_Where_Do_We_Go%3F">When We
+                <b class="name">2018—2020: <a
+                        href="https://ru.wikipedia.org/wiki/When_We_All_Fall_Asleep,_Where_Do_We_Go%3F">When We
                         All Fall Asleep, Where Do We Go?</a></b>
                 <br><br>
                 29 марта 2019 года Билли Айлиш выпустила свой первый студийный альбом <b>«When We All Fall Asleep, Where
@@ -81,7 +85,8 @@
             </li>
 
             <li>
-                <b>2021: <a href="https://ru.wikipedia.org/wiki/Happier_Than_Ever">Happier Than Ever</a></b>
+                <b class="name"> 2021: <a href="https://ru.wikipedia.org/wiki/Happier_Than_Ever">Happier Than
+                        Ever</a></b>
                 <br><br>
                 27 апреля 2021 года Айлиш объявила в своём аккаунте в <a
                     href="https://ru.wikipedia.org/wiki/Instagram">Instagram</a>, что её второй студийный альбом
@@ -99,7 +104,7 @@
         </ul>
     </main>
     <footer>
-        <h3>Ссылки</h3>
+        <h3 class="name">Ссылки</h3>
         <ul>
             <li><a href="https://youtube.com/watch?v=I3QbJlDpmZw">Певица Билли Айлиш/Billie Eilish. Вечерний Ургант.
                     09.09.2019</a></li>
@@ -109,8 +114,8 @@
                 сентября 2019 г.</li>
         </ul>
         <p class="link">Страница создана 12.09.2021<br>
-            by Anika Kirilyuk <br><a href="https://www.instagram.com/anikakirilyuk/?hl=ru"><img
-                    src="img/inst.png" class="link" alt="инстаграм"></a> </p>
+            by Anika Kirilyuk <br><a href="https://www.instagram.com/anikakirilyuk/?hl=ru"><img src="/img/inst.png"
+                    class="link" alt="инстаграм"></a> </p>
 
     </footer>
 
