--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </header>
     <main>
         <div style="text-align:center">
-            <img src="/img/220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
+            <img src="img/220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
-            <img src="/img/11.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
-            <img src="/img/56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
+            <img src="img/11.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
+            <img src="img/56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
                 style="margin:0px 10px 0px 10px; ">
         </div>
         <p>
@@ -114,7 +114,7 @@
                 сентября 2019 г.</li>
         </ul>
         <p class="link">Страница создана 12.09.2021<br>
-            by Anika Kirilyuk <br><a href="https://www.instagram.com/anikakirilyuk/?hl=ru"><img src="/img/inst.png"
+            by Anika Kirilyuk <br><a href="https://www.instagram.com/anikakirilyuk/?hl=ru"><img src="img/inst.png"
                     class="link" alt="инстаграм"></a> </p>
 
     </footer>
