--- a/index.html
+++ b/index.html
@@ -5,119 +5,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="css/style.css">
-    <title>Lesson 4</title>
+    <title> Lesson 6 </title>
 </head>
 
 <body>
-    <header>
-        <h1>Billie</h1>
-        <h1 id="sec">Eilish</h1>
-        <p class="comment">Материал из Википедии — свободной энциклопедии</p>
-    </header>
-    <main>
-        <div style="text-align:center">
-            <img src="img/220px-Billie_Eilish_at_Pukkelpop_(48590443381)_(cropped).jpg" alt="фотография Билли Айлиш"
-                style="margin:0px 10px 0px 10px; ">
-            <img src="img/11.jpg" alt="фотография Билли Айлиш" style="margin:0px 10px 0px 10px; ">
-            <img src="img/56973906_1031440620389086_5150401069125206016_o.jpg" alt="фотография Билли Айлиш"
-                style="margin:0px 10px 0px 10px; ">
-        </div>
-        <p>
-            <b class="name">Билли Айлиш Пайрат Бэрд О’Коннелл</b> <i>(англ. Billie Eilish Pirate Baird O'Connell; род.
-                18 декабря
-                2001)</i>— американская певица и автор песен. Снискала известность в 2016 году благодаря публикации
-            дебютного сингла «Ocean Eyes» на <a href="https://ru.wikipedia.org/wiki/SoundCloud">SoundCloud</a>. В 2019
-            году её дебютный альбом When We All Fall Asleep, Where Do We Go? возглавил американский <a
-                href="https://ru.wikipedia.org/wiki/Billboard_200">(Billboard 200)</a> и британский <a
-                href="https://ru.wikipedia.org/wiki/UK_Albums_Chart">(UK Albums Chart)</a> хит-парады, а сингл «Bad Guy»
-            вышел на первое место в <a href="https://ru.wikipedia.org/wiki/Billboard_Hot_100">Billboard Hot 100</a>
-            (США).
-        </p>
-        <p>
-            В 2020 году Айлиш стала триумфатором музыкальной премии «<a
-                href="https://ru.wikipedia.org/wiki/62-я_церемония_«Грэмми»">Грэмми</a>», выиграв все четыре основные
-            номинации: <b>Песня года, Альбом года, Запись года и Лучший новый исполнитель</b>, а также победив в
-            номинации <b>Лучший вокальный поп-альбом</b>. В результате она стала первым с 1981 года исполнителем (и лишь
-            вторым в истории после <a href="https://ru.wikipedia.org/wiki/Кросс,_Кристофер">Кристофера Кросса</a>),
-            получившим все четыре главных награды года; в общей сложности певица является обладательницей семи премий
-            «Грэмми» (по состоянию на 15 марта 2021 года).
-        </p>
-        <h3>Карьера</h3>
-        <ul>
-            <li>
-                <b class="name">2015—2017: <a href="https://ru.wikipedia.org/wiki/Don’t_Smile_at_Me">Don’t Smile At
-                        Me</a></b>
-                <br><br>
-                В 2015 году 13-летняя Билли начала работать над песнями вместе со своим братом <a
-                    href="https://ru.wikipedia.org/wiki/О’Коннелл,_Финнеас">Финнеасом О’Коннеллом</a>, который уже
-                несколько лет писал и продюсировал песни и имел свою собственную группу. Первые песни, которые они
-                записали вместе, назывались «She’s Broken» и «Fingers Crossed».
-                <br><br>
-                11 августа 2017 года Билли Айлиш выпустила альбом Don’t Smile at Me. EP стал неожиданным хитом и
-                достигнул 14-го места в американском <a href="https://ru.wikipedia.org/wiki/Billboard_200">Billboard
-                    200</a>. Билли отправилась в турне Don’t Smile at Me в октябре 2017 года в поддержку своего EP.
-                Айлиш выпустила «Bitches Broken Hearts» через <a
-                    href="https://ru.wikipedia.org/wiki/SoundCloud">SoundCloud</a> 10 ноября 2017 года. Команда Айлиш
-                работала с Spotify, которая продвигала её в своем самом популярном плей-листе «Today’s Top Hits»,
-                поэтому её коммерческий успех значительно расширился.
-            </li>
-            <li>
-                <b class="name">2018—2020: <a
-                        href="https://ru.wikipedia.org/wiki/When_We_All_Fall_Asleep,_Where_Do_We_Go%3F">When We
-                        All Fall Asleep, Where Do We Go?</a></b>
-                <br><br>
-                29 марта 2019 года Билли Айлиш выпустила свой первый студийный альбом <b>«When We All Fall Asleep, Where
-                    Do We Go?»</b>. Альбом дебютировал на вершине <a
-                    href="https://ru.wikipedia.org/wiki/Billboard_200">Billboard 200</a>, а также в британском чарте
-                альбомов. Айлиш стала первой исполнительницей, родившейся в 2000-х годах, у которой альбом занял первую
-                строчку в чартах Соединенных Штатов, и самой молодой женщиной, когда-либо имевшей альбом номер один в
-                чартах Великобритании.
-                <br>
-                <br>
-                20 ноября 2019 года Айлиш была номинирована на шесть премий «<a
-                    href="https://ru.wikipedia.org/wiki/Грэмми">Грэмми</a>», включая «Запись года» и «Песня года» за
-                «Bad Guy», а также «Альбом года» и «Лучший новый исполнитель». В возрасте 17 лет она стала самой молодой
-                артисткой, номинированной во всех четырёх основных категориях <a
-                    href="https://ru.wikipedia.org/wiki/Грэмми">Грэмми</a>. В том же месяце Билли была коронована в 2019
-                году на <a href="https://ru.wikipedia.org/wiki/Billboard">Billboard</a> Woman of the Year.
-            </li>
+    <div class="wrapper">
+        <header class="header">
+            <div class="block">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis libero, ab vel vitae maiores
+                reiciendis, cumque quaerat exercitationem
+            </div>
+            <div class="block_2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, reprehenderit soluta cumque repudiandae
+            </div>
+        </header>
+        <main class="main">
+            <a href="#" class="block_3">
+                КНОПОЧКА
+            </a>
+        </main>
+        <footer class="footer">
+            <h3>Задача №1</h3>
+            <div id="first"></div>
+            <br>
+            <br>
+            <h3>Задача №2</h3>
+            <div id="second">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste ut voluptatum, dolorem itaque
+                    inventore impedit ex soluta illum est, porro ullam maiores, repellendus repudiandae fugiat sequi
+                    doloribus amet fuga dolore.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste ut voluptatum, dolorem itaque
+                    inventore impedit ex soluta illum est, porro ullam maiores, repellendus repudiandae fugiat sequi
+                    doloribus amet fuga dolore.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste ut voluptatum, dolorem itaque
+                    inventore impedit ex soluta illum est, porro ullam maiores, repellendus repudiandae fugiat sequi
+                    doloribus amet fuga dolore.</p>
 
-            <li>
-                <b class="name"> 2021: <a href="https://ru.wikipedia.org/wiki/Happier_Than_Ever">Happier Than
-                        Ever</a></b>
-                <br><br>
-                27 апреля 2021 года Айлиш объявила в своём аккаунте в <a
-                    href="https://ru.wikipedia.org/wiki/Instagram">Instagram</a>, что её второй студийный альбом
-                «Happier Than Ever» выйдет 30 июля. В этой же публикации также была показана обложка альбома.
-                <br><br>
-                29 апреля 2021 года Айлиш выпустила третий сингл из грядущего альбома под названием «Your Power». Релиз
-                сопровождался музыкальным видео, срежиссированным самой певицей. 27 июля 2021 года стало известно, что
-                альбом альбом «Happier Than Ever» поставил рекорд по количеству пред-заказов за всю историю <a
-                    href="https://ru.wikipedia.org/wiki/Apple_Music">Apple Music</a>.
-                <br><br>
-                30 июля 2021 года официально вышел второй студийный альбом Билли Айлиш под названием «Happier Than
-                Ever». Альбом содержит 16 треков. В этот же день вышло музыкальное видео на трек «Happier Than Ever» из
-                нового альбома.
-            </li>
-        </ul>
-    </main>
-    <footer>
-        <h3 class="name">Ссылки</h3>
-        <ul>
-            <li><a href="https://youtube.com/watch?v=I3QbJlDpmZw">Певица Билли Айлиш/Billie Eilish. Вечерний Ургант.
-                    09.09.2019</a></li>
-            <li><a href="https://youtube.com/watch?v=BboMpayJomw">Billie Eilish — No Time To Die 2020 г.</a>1 октября
-            </li>
-            <li><a href="https://youtube.com/watch?v=-PZsSWwc9xA">Billie Eilish — all the good girls go to hell </a>4
-                сентября 2019 г.</li>
-        </ul>
-        <p class="link">Страница создана 12.09.2021<br>
-            by Anika Kirilyuk <br><a href="https://www.instagram.com/anikakirilyuk/?hl=ru"><img src="img/inst.png"
-                    class="link" alt="инстаграм"></a> </p>
-
+            </div>
+            <br>
+            <br>
+            <h3>задача №3</h3>
+            <div id="third">
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ut magnam illo, aliquid dicta id
+                    ipsa ea eveniet animi enim iusto fugit est labore ducimus atque accusamus ipsum dolorum
+                    laudantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quae. Excepturi
+                    commodi nihil minima, maxime odio ratione saepe dolorem aliquam vero, architecto deserunt
+                    consequuntur quidem distinctio! Quod qui molestiae nemo?</span>
+            </div>
+            <br><br>
+            <h3>задача №4</h3>
+            <div id="fourth"></div>
+            <h3>задача №5</h3>
+            <div>
+                <a href="#" id="five">ссыль</a>
+            </div>
+    </div>
     </footer>
+    </div>
 
 </body>
 
